--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@ngx-translate/core": "14.0.0",
     "@ngx-translate/http-loader": "7.0.0",
     "@popperjs/core": "2.11.2",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
     "bootstrap": "5.1.3",
     "dayjs": "1.10.7",
     "ngx-infinite-scroll": "10.0.1",
